주기 변경, 수집 기간 변경

--- a/PoC/01_ingest_bronze_binance.py.ipynb
+++ b/PoC/01_ingest_bronze_binance.py.ipynb
@@ -25,14 +25,14 @@
     "from pyspark.sql import Row\n",
     "from pyspark.sql.functions import col, to_timestamp\n",
     "from pyspark.sql.types import StructType, StructField, StringType\n",
-    "from delta.tables import DeltaTable\n",
+    "from bronze_ingest_utils import BronzeTableConfig, BronzeTableWriter, params_hash\n",
     "\n",
     "# =========================\n",
     "# (A) 실행 설정\n",
     "# =========================\n",
-    "MODE           = \"backfill\"                   # once | poll | forever | backfill\n",
-    "SYMBOLS        = [\"BTCUSDT\",\"ETHUSDT\"]      # 원하는 코인 심볼들\n",
-    "INTERVALS      = [\"15m\"]                      # [\"1m\",\"5m\"] 등\n",
+    "MODE           = \"backfill\"                     # once | poll | forever | backfill\n",
+    "SYMBOLS        = [\"BTCUSDT\",\"ETHUSDT\"]          # 원하는 코인 심볼들\n",
+    "INTERVALS      = [\"1m\"]                         # [\"1m\",\"5m\"] 등\n",
     "LIMIT_ONCE     = 1000                           # 호출당 캔들 수(최대 1000)\n",
     "POLL_SECONDS   = 10                             # poll/forever 간격(초)\n",
     "MAX_POLLS      = 60                             # poll 모드 반복 횟수\n",
@@ -87,15 +87,19 @@
     ") USING DELTA\n",
     "\"\"\")\n",
     "\n",
+    "BRONZE_WRITER = BronzeTableWriter(\n",
+    "    spark,\n",
+    "    BronzeTableConfig(\n",
+    "        table_name=TABLE,\n",
+    "        merge_condition=\"t.unique_key = s.unique_key AND t.dt = s.dt\",\n",
+    "        update_ingest_time=UPSERT_UPDATE_INGEST_TIME,\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "\n",
     "# =========================\n",
     "# (D) 유틸리티\n",
     "# =========================\n",
-    "def _params_hash(params: Dict) -> str:\n",
-    "    \"\"\"요청 파라미터 dict -> 안정적인 해시 문자열\"\"\"\n",
-    "    raw = json.dumps(params, sort_keys=True, separators=(\",\",\":\"))\n",
-    "    import hashlib\n",
-    "    return hashlib.sha256(raw.encode(\"utf-8\")).hexdigest()\n",
-    "\n",
     "def _to_ms(ts: dt.datetime) -> int:\n",
     "    \"\"\"UTC-aware datetime -> epoch milliseconds\"\"\"\n",
     "    if ts.tzinfo is None:\n",
@@ -171,7 +175,7 @@
     "    if not rows:\n",
     "        return 0, None\n",
     "\n",
-    "    param_hash = _params_hash(params)\n",
+    "    param_hash = params_hash(params)\n",
     "    now = dt.datetime.now(dt.timezone.utc)\n",
     "    recs = []\n",
     "    max_open_ms = None\n",
@@ -212,38 +216,9 @@
     "        .withColumn(\"dt\",          col(\"dt\").cast(\"date\")) \\\n",
     "        .dropDuplicates([\"unique_key\"])\n",
     "\n",
-    "    # Delta MERGE: (unique_key AND dt) 기준으로 idempotent UPSERT\n",
-    "    delta_table = DeltaTable.forName(spark, TABLE)\n",
     "\n",
-    "    # ingest_time 갱신 정책에 따른 SET 구성\n",
-    "    if UPSERT_UPDATE_INGEST_TIME:\n",
-    "        set_map = {\n",
-    "            \"source\":       \"s.source\",\n",
-    "            \"event_time\":   \"s.event_time\",\n",
-    "            \"ingest_time\":  \"s.ingest_time\",   # 매 업서트마다 최신으로 갱신\n",
-    "            \"raw_json\":     \"s.raw_json\",\n",
-    "            \"api_endpoint\": \"s.api_endpoint\",\n",
-    "            \"api_params_hash\":\"s.api_params_hash\",\n",
-    "            \"dt\":           \"s.dt\"\n",
-    "        }\n",
-    "    else:\n",
-    "        set_map = {\n",
-    "            \"source\":       \"s.source\",\n",
-    "            \"event_time\":   \"s.event_time\",\n",
-    "            \"ingest_time\":  \"t.ingest_time\",   # 최초값 보존\n",
-    "            \"raw_json\":     \"s.raw_json\",\n",
-    "            \"api_endpoint\": \"s.api_endpoint\",\n",
-    "            \"api_params_hash\":\"s.api_params_hash\",\n",
-    "            \"dt\":           \"s.dt\"\n",
-    "        }\n",
-    "\n",
-    "    (delta_table.alias(\"t\")\n",
-    "        .merge(df.alias(\"s\"), \"t.unique_key = s.unique_key AND t.dt = s.dt\")  # 파티션 포함 조인\n",
-    "        .whenMatchedUpdate(set=set_map)\n",
-    "        .whenNotMatchedInsertAll()\n",
-    "        .execute())\n",
-    "\n",
-    "    return df.count(), max_open_ms\n",
+    "    count = BRONZE_WRITER.upsert(df)\n",
+    "    return count, max_open_ms\n",
     "\n",
     "# =========================\n",
     "# (F) 모드별 동작\n",
