--- a/PoC/01_ingest_bronze_binance.py.ipynb
+++ b/PoC/01_ingest_bronze_binance.py.ipynb
@@ -32,7 +32,7 @@
     "# =========================\n",
     "MODE           = \"backfill\"                     # once | poll | forever | backfill\n",
     "SYMBOLS        = [\"BTCUSDT\",\"ETHUSDT\"]          # 원하는 코인 심볼들\n",
-    "INTERVALS      = [\"1m\"]                         # [\"1m\",\"5m\"] 등\n",
+    "INTERVALS      = [\"15m\"]                         # [\"15m\",\"1h\"] 등\n",
     "LIMIT_ONCE     = 1000                           # 호출당 캔들 수(최대 1000)\n",
     "POLL_SECONDS   = 10                             # poll/forever 간격(초)\n",
     "MAX_POLLS      = 60                             # poll 모드 반복 횟수\n",
